[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/level_select/level_select_item_body.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/spacer.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/scaffolder/src/gui/control_row_list/control_row_list.tscn" type="PackedScene" id=5]

[node name="LevelSelectItemBody" type="VBoxContainer"]
visible = false
margin_top = -108.0
margin_right = 864.0
size_flags_horizontal = 8
size_flags_vertical = 4
custom_constants/separation = 16
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer3" parent="." instance=ExtResource( 3 )]

[node name="PlayButton" parent="." instance=ExtResource( 4 )]
margin_left = 140.0
margin_top = 16.0
margin_right = 260.0
margin_bottom = 76.0
rect_min_size = Vector2( 120, 60 )
texture_key = "go_normal"
texture_scale = Vector2( 1.125, 1.125 )
is_shiny = true
includes_color_pulse = true
size_override = Vector2( 120, 60 )

[node name="LabeledControlList" parent="." instance=ExtResource( 5 )]
margin_top = 92.0
margin_right = 400.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Spacer4" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
